@@ -139,7 +139,6 @@ AC_MSG_RESULT($has_pyglade)
 AC_CONFIG_FILES([
 po/Makefile.in
 m4/Makefile
-help/Makefile
 Makefile
 gramps.sh
 src/const.py
